--- a/package.json
+++ b/package.json
@@ -11,31 +11,35 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.1.1",
+    "@heroicons/react": "^2.2.0",
     "@tauri-apps/api": "^2.2.0",
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-process": "^2.2.0",
     "@tauri-apps/plugin-store": "^2.2.0",
+    "postcss": "^8.4.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-modal": "^3.16.3",
-    "react-select": "^5.9.0"
+    "react-select": "^5.9.0",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
     "@rocketseat/eslint-config": "^2.2.2",
+    "@tailwindcss/typography": "^0.5.9",
     "@tauri-apps/cli": "^2.1.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^3.2.1",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.19.1",
     "vite": "^6.0.3"
