--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,6 +27,11 @@ tauri-plugin-dialog = "2"
 tauri-plugin-process = "2.2.0"
 tauri-plugin-fs = "2"
 tauri-plugin-store = "2.2.0"
+dotenv = "0.15"
+tauri-plugin-http = "2"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] } # Necessário para chamadas assíncronas
+
 
 [target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
 tauri-plugin-autostart = "2.2.0"
