--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
     "react-select": "^5.9.0",
     "tailwindcss": "^3.3.2"
